fix formt of code

--- a/speakers.html
+++ b/speakers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR" xmlns="http://www.w3.org/1999/html" class="scroll-smooth">
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -124,7 +124,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/pedro-florencio.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/pedro-florencio.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -146,7 +146,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px; width: 100px;" src="/assets/images/avatar/marcos-jacinto.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium" src="/assets/images/avatar/marcos-jacinto.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -165,7 +165,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/denys-carvalho.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/denys-carvalho.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -213,7 +213,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/juliana-barros-lima.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/juliana-barros-lima.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -234,13 +234,12 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/apyb.jpg" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/apyb.jpg" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
                                 <span class="uk-badge uk-badge-large uk-badge-beige">10:20 - 11:10</span>
                                 <p class="uk-text-bold">APyB</p>
-                                <p><strong>Palestrante(s) </strong> </p>
                             </div>
                         </div>
                     </div>
@@ -255,7 +254,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/clara-santos.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/clara-santos.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -276,7 +275,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/mariana-cristina.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/mariana-cristina.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -297,10 +296,10 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto uk-margin-bottom">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px; width: 100px;" src="/assets/images/avatar/lucas-vilela.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium" src="/assets/images/avatar/lucas-vilela.png" alt="Avatar">
                                 </div>
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/flavio-juvenal.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/flavio-juvenal.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -321,7 +320,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/vinicius-mendes.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/vinicius-mendes.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -342,7 +341,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto uk-margin-bottom">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px; width: 100px;" src="/assets/images/avatar/ana-cecilia.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium" src="/assets/images/avatar/ana-cecilia.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -369,7 +368,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/luis-vinicius.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/luis-vinicius.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -390,7 +389,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/alexandre-kavalerski.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/alexandre-kavalerski.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -411,7 +410,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/rafaela-torres.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/rafaela-torres.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -432,7 +431,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/deborah-foroni.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/deborah-foroni.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -453,7 +452,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/carolina-soares.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/carolina-soares.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -474,7 +473,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/ivyna-santino.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/ivyna-santino.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -495,7 +494,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px; width: 100px;" src="/assets/images/avatar/ana-carla-cavalcante.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium" src="/assets/images/avatar/ana-carla-cavalcante.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -516,7 +515,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px" src="/assets/images/avatar/renan-santos.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/renan-santos.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -537,7 +536,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto uk-margin-bottom">
-                                    <img class="uk-border-circle" style="object-fit: cover; height: 100px; width: 100px;" src="/assets/images/avatar/gustavo-carvalho.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium" src="/assets/images/avatar/gustavo-carvalho.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small">
@@ -605,32 +604,25 @@
     </footer>
 </body>
 <script>
-    // Seleciona todos os cartões com ID card
     const cards = document.querySelectorAll('.card');
 
-    // Seleciona todas as divs de dia
     const days = document.querySelectorAll('[id^="day"]');
 
-    // Adicionar evento de clique em cada cartão
     cards.forEach(card => {
         card.addEventListener('click', () => {
-            // Mudar o background-color do cartão clicado para azul e remover do anterior
             cards.forEach(c => {
                 c.classList.remove('uk-card-purple');
                 c.classList.add('uk-card-gray');
-                c.style.boxShadow = 'none'; // Remove a sombra dos outros cartões
+                c.style.boxShadow = 'none';
             });
 
-            card.classList.add('uk-card-purple'); // Adiciona a cor ao cartão clicado
-            card.classList.remove('uk-card-gray'); // Remove a cor do cartão clicado
-            card.style.boxShadow = '0 0 10px 0 rgba(0, 0, 0, 0.1)'; // Adiciona uma leve sombra ao cartão clicado
+            card.classList.add('uk-card-purple');
+            card.classList.remove('uk-card-gray');
+            card.style.boxShadow = '0 0 10px 0 rgba(0, 0, 0, 0.1)';
 
-            // Oculta todas as divs de dia
             days.forEach(day => day.style.display = 'none');
 
-            // Exibe a div do dia correspondente
             var dayId = 'day' + card.id.replace('card', '');
-            // preciso que seja flex e flex-wrap para que as divs fiquem alinhadas
             document.getElementById(dayId).style.display = 'flex';
             document.getElementById(dayId).style.flexWrap = 'wrap';
         });
