add link refirect to talks

--- a/speakers.html
+++ b/speakers.html
@@ -49,6 +49,7 @@
                 <li><a class="uk-navbar-item" href="#local">Local</a></li>
                 <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li>
                 <li><a class="uk-navbar-item" href="#patrocinadoras">Patrocinadoras</a></li>
+                <li><a class="uk-navbar-item" href="/speakers.html">Palestras</a></li>
             </ul>
             <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon uk-toggle="target: #sidenav"></a>
         </div>
@@ -68,6 +69,7 @@
                 <li><a class="uk-navbar-item" href="#local">Local</a></li>
                 <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li>
                 <li><a class="uk-navbar-item" href="#patrocinadoras">Patrocinadoras</a></li>
+                <li><a class="uk-navbar-item" href="/speakers.html">Palestras</a></li>
             </ul>
         </div>
     </div>
