--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li><a class="uk-navbar-item" href="#local">Local</a></li>
                 <!-- <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li> -->
                 <li><a class="uk-navbar-item" href="#patrocinadoras">Patrocinadoras</a></li>
-                <li><a class="uk-navbar-item" href="/speakers.html">Palestras</a></li>
+                <li><a class="uk-navbar-item" href="/speakers.html">Agenda</a></li>
 
             </ul>
             <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon uk-toggle="target: #sidenav"></a>
@@ -69,7 +69,7 @@
                 <li><a class="uk-navbar-item" href="#local">Local</a></li>
                 <!-- <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li> -->
                 <li><a class="uk-navbar-item" href="#patrocinadoras">Patrocinadoras</a></li>
-                <li><a class="uk-navbar-item" href="/speakers.html">Palestras</a></li>
+                <li><a class="uk-navbar-item" href="/speakers.html">Agenda</a></li>
 
             </ul>
         </div>
@@ -254,7 +254,7 @@
                             </a>
                         </li>
                         <!-- <li>Keynotes</li> -->
-                        <li><a href="#patrocinio">Patrocínio</a></li>
+                        <!-- <li><a href="#patrocinio">Patrocínio</a></li> -->
                         <li><a href="https://github.com/pythonNordeste/codigo-de-conduta">Código de Conduta (CDC)</a></li>
                         <!-- <li>Perguntas Frequentes</li> -->
                         <!-- <li>Programação</li> -->
