--- a/speakers.html
+++ b/speakers.html
@@ -45,11 +45,11 @@
         <div class="uk-navbar-center">
             <ul class="uk-navbar-nav uk-visible@s">
                 <li><a class="uk-navbar-item" href="/">Inicio</a></li>
-                <li><a class="uk-navbar-item" href="#sobre">Sobre</a></li>
-                <li><a class="uk-navbar-item" href="#local">Local</a></li>
-                <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li>
-                <li><a class="uk-navbar-item" href="#patrocinadoras">Patrocinadoras</a></li>
-                <li><a class="uk-navbar-item" href="/speakers.html">Palestras</a></li>
+                <li><a class="uk-navbar-item" href="/index.html#sobre">Sobre</a></li>
+                <li><a class="uk-navbar-item" href="/index.html#local">Local</a></li>
+                <li><a class="uk-navbar-item" href="/index.html#patrocinio">Patrocínio</a></li>
+                <li><a class="uk-navbar-item" href="/index.html#patrocinadoras">Patrocinadoras</a></li>
+                <li><a class="uk-navbar-item" href="/speakers.html">Agenda</a></li>
             </ul>
             <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon uk-toggle="target: #sidenav"></a>
         </div>
@@ -95,31 +95,28 @@
                 </div>
             </div>
         </div>
-
-        <div class="uk-grid-small uk-child-width-expand@s" uk-grid>
-            <div>
-                <div class="uk-card-green">
-                    <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
-                        Escola de Governo Cardeal Dom Eugênio de Araújo Sales
-                    </span>
-                </div>
-                <div class="uk-card uk-card-default uk-text-center">
-                    <span class="custom-class uk-badge uk-badge-large uk-badge-beige">09:00</span>
-                    <h3 class="custom-class"> Inicio do credenciamento </h3>
-                </div>
-            </div>
-            </div>
-        </div>
     </div>
 
     <div class="uk-container uk-margin-bottom">
         <!-- PRIMEIRO DIA -->
         <div id="day1">
+            <div class="uk-width-1-1@m uk-margin-bottom">
+                <div class="uk-card-green">
+                    <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
+                        Universidade Federal do Rio Grande do Norte (UFRN)
+                    </span>
+                </div>
+                <div class="uk-card uk-card-default uk-text-center">
+                    <span class="custom-class uk-badge uk-badge-large uk-badge-beige">09:00 - 09:30</span>
+                    <h3 class="custom-class"> Inicio do credenciamento </h3>
+                </div>
+            </div>
+
             <div class="uk-grid-small uk-grid-stack" uk-grid style="display: flex; flex-wrap: wrap;">
                 <div class="uk-width-1-3@m uk-width-1-2@s">
                     <div class="uk-card-primary">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
-                        Sala 1
+                            Sala 1
                         </span>
                     </div>
                     <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
@@ -132,7 +129,7 @@
                             <div class="uk-text-center uk-text-small">
                                 <span class="uk-badge uk-badge-large uk-badge-beige">09:30 - 11:30</span>
                                 <p class="uk-text-bold">Visualização e Processamento de Dados Geoespaciais: Uma Introdução Prática.</p>
-                                
+
                                 <p><strong>Palestrante(s) </strong>Pedro Florencio de Almeida Neto</p>
                             </div>
                         </div>
@@ -204,8 +201,20 @@
 
         <!-- SEGUNDO DIA-->
         <div id="day2" style="display: none;">
-            <div class="uk-grid-small uk-child-width-expand@s" uk-grid>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+            <div class="uk-width-1-1@m uk-margin-bottom">
+                <div class="uk-card-green">
+                    <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
+                        Escola de Governo Cardeal Dom Eugênio de Araújo Sales
+                    </span>
+                </div>
+                <div class="uk-card uk-card-default uk-text-center">
+                    <span class="custom-class uk-badge uk-badge-large uk-badge-beige">08:30 - 09:15</span>
+                    <h3 class="custom-class"> Inicio do credenciamento/Café da manhã </h3>
+                </div>
+            </div>
+
+            <div class="uk-grid-small uk-child-width-expand@s uk-grid-match" uk-grid>
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                             Sala 1
@@ -226,7 +235,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                             Sala 2
@@ -241,12 +250,12 @@
                             </div>
                             <div class="uk-text-center uk-text-small">
                                 <span class="uk-badge uk-badge-large uk-badge-beige">10:20 - 11:10</span>
-                                <p class="uk-text-bold">APyB</p>
+                                <!-- <p class="uk-text-bold">APyB</p> -->
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                         Sala 1
@@ -267,7 +276,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                             Sala 2
@@ -288,7 +297,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                             Sala 1
@@ -312,7 +321,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                             Sala 2
@@ -333,25 +342,41 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
-                    <div class="uk-card-green">
-                        <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
-                        Sala 2
-                        </span>
-                    </div>
-                    <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
-                        <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
-                            <div class="uk-text-center uk-text-small">
-                                <div class="uk-width-auto uk-margin-bottom">
-                                    <img class="uk-border-circle avatar-medium" src="/assets/images/avatar/ana-cecilia.png" alt="Avatar">
+                <div class="uk-width-1-1@m uk-width-1-1@s">
+                    <div>
+                        <div class="uk-card-green">
+                            <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
+                                Sala 2
+                            </span>
+                        </div>
+                        <div class="uk-card-default uk-card" style="padding: 1.5rem 0.7rem;">
+                            <div class="uk-grid-small uk-child-width-expand@m" uk-grid>
+                                <div class="uk-text-center uk-text-small">
+                                    <div class="uk-width-auto uk-margin-bottom">
+                                        <img class="uk-border-circle avatar-medium" src="/assets/images/avatar/ana-cecilia.png" alt="Avatar">
+                                    </div>
+                                </div>
+                                <div class="uk-text-center uk-text-small">
+                                    <span class="uk-badge uk-badge-large uk-badge-beige">14:50 - 15:50</span>
+                                    <p class="uk-text-bold"></p>
+                                    <p><strong>Keynote: </strong> Ana Cecília Vieira </p>
                                 </div>
                             </div>
-                            <div class="uk-text-center uk-text-small">
-                                <span class="uk-badge uk-badge-large uk-badge-beige">14:50 - 15:50</span>
-                                <p class="uk-text-bold"></p>
-                                <p><strong>Palestrante(s) </strong> Ana Cecilia </p>
-                            </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="uk-width-1-1@m">
+                    <div class="uk-card uk-card-default uk-text-center">
+                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">15:50 - 16:20</span>
+                        <h3 class="custom-class"> Coffee-break </h3>
+                    </div>
+                </div>
+
+                <div class="uk-width-1-1@m">
+                    <div class="uk-card uk-card-default uk-text-center">
+                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">16:20 - 17:00</span>
+                        <h3 class="custom-class"> Palestras relâmpago </h3>
                     </div>
                 </div>
             </div>
@@ -359,8 +384,20 @@
 
         <!-- TERCEIRO DIA -->
         <div id="day3" style="display: none;">
+            <div class="uk-width-1-1@m uk-margin-bottom">
+                <div class="uk-card-green">
+                    <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
+                        Escola de Governo Cardeal Dom Eugênio de Araújo Sales
+                    </span>
+                </div>
+                <div class="uk-card uk-card-default uk-text-center">
+                    <span class="custom-class uk-badge uk-badge-large uk-badge-beige">08:30 - 09:15</span>
+                    <h3 class="custom-class"> Inicio do credenciamento/Café da manhã </h3>
+                </div>
+            </div>
+
             <div class="uk-grid-small uk-child-width-expand@s" uk-grid>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                             Sala 1
@@ -381,7 +418,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                             Sala 2
@@ -402,7 +439,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                             Sala 1
@@ -423,7 +460,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                             Sala 2
@@ -444,7 +481,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                             Sala 1
@@ -465,7 +502,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                             Sala 2
@@ -486,7 +523,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                             Sala 1
@@ -507,7 +544,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-2@m uk-width-1-2@s">
                     <div class="uk-card-brown">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                             Sala 2
@@ -528,7 +565,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="uk-width-1-3@m uk-width-1-2@s">
+                <div class="uk-width-1-1@m">
                     <div class="uk-card-green">
                         <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                         Sala 1
@@ -544,9 +581,23 @@
                             <div class="uk-text-center uk-text-small">
                                 <span class="uk-badge uk-badge-large uk-badge-beige">14:50 - 15:50</span>
                                 <p class="uk-text-bold"></p>
-                                <p><strong>Palestrante(s) </strong> Gustavo Carvalho</p>
+                                <p><strong>Keynote </strong> Gustavo Carvalho</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="uk-width-1-1@m">
+                    <div class="uk-card uk-card-default uk-text-center">
+                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">15:50 - 16:30</span>
+                        <h3 class="custom-class"> Encerramento </h3>
+                    </div>
+                </div>
+
+                <div class="uk-width-1-1@m">
+                    <div class="uk-card uk-card-default uk-text-center">
+                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">16:30 - 17:00</span>
+                        <h3 class="custom-class"> Coffee-break </h3>
                     </div>
                 </div>
             </div>
@@ -606,6 +657,7 @@
     </footer>
 </body>
 <script>
+document.addEventListener("DOMContentLoaded", function(event) {
     const cards = document.querySelectorAll('.card');
 
     const days = document.querySelectorAll('[id^="day"]');
@@ -629,5 +681,6 @@
             document.getElementById(dayId).style.flexWrap = 'wrap';
         });
     });
+});
 </script>
 </html>
