Update keynote panel and add missing tutorial

--- a/speakers.html
+++ b/speakers.html
@@ -167,6 +167,28 @@
                         <div class="uk-grid-small uk-child-width-expand@m agenda-card-body">
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
+                                    <!-- <img class="uk-border-circle avatar-medium" src="/assets/images/avatar/marcos-jacinto.png" alt="Avatar"> -->
+                                </div>
+                            </div>
+                            <div class="uk-text-center uk-text-small uk-grid-margin">
+                                <span class="uk-badge uk-badge-large uk-badge-beige">14:30 - 16:30</span>
+                                <p class="uk-text-bold">Introdução a Programação Competitiva com Python</p>
+                                <p><strong>Palestrante(s) </strong> Pablo Gustavo, Ian Gabriel</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="uk-width-1-2@m uk-width-1-2@s">
+                    <div class="uk-card-default uk-card">
+                        <div class="uk-card-brown">
+                            <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
+                                Sala 2
+                            </span>
+                        </div>
+                        <div class="uk-grid-small uk-child-width-expand@m agenda-card-body">
+                            <div class="uk-text-center uk-text-small">
+                                <div class="uk-width-auto">
                                     <img class="uk-border-circle avatar-medium uk-margin-bottom" src="/assets/images/avatar/ana-carolina-dias.png" alt="Avatar">
                                     <img class="uk-border-circle avatar-medium" src="/assets/images/avatar/ellem-amorim.png" alt="Avatar">
                                 </div>
@@ -197,7 +219,7 @@
             </div>
 
             <div class="uk-width-1-1@m uk-margin-bottom">
-                <div class="uk-card-green">
+                <div class="uk-card-purple">
                     <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                         Sala 1
                     </span>
@@ -359,7 +381,8 @@
                                 <div class="uk-text-center uk-text-small">
                                     <span class="uk-badge uk-badge-large uk-badge-beige">14:50 - 15:50</span>
                                     <p class="uk-text-bold"></p>
-                                    <p><strong>Keynote: </strong> Ana Cecília Vieira </p>
+                                    <strong style="font-size: 1rem;">Keynote</strong>
+                                    <p style="font-size: 1.2rem;" class="uk-text-bold">Ana Cecília Vieira</p>
                                 </div>
                             </div>
                         </div>
@@ -368,21 +391,21 @@
 
                 <div class="uk-width-1-1@m">
                     <div class="uk-card uk-card-default uk-text-center">
-                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">15:50 - 16:20</span>
+                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">15:50 - 16:30</span>
                         <h3 class="custom-class"> Coffee-break </h3>
                     </div>
                 </div>
 
                 <div class="uk-width-1-1@m">
                     <div class="uk-card uk-card-default uk-text-center">
-                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">16:20 - 17:00</span>
+                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">16:30 - 17:15</span>
                         <h3 class="custom-class"> Palestras relâmpago </h3>
                     </div>
                 </div>
 
                 <div class="uk-width-1-1@m">
                     <div class="uk-card uk-card-default uk-text-center">
-                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">17:00 - 17:30</span>
+                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">17:15 - 17:30</span>
                         <h3 class="custom-class"> Encerramento primeiro dia </h3>
                     </div>
                 </div>
@@ -596,7 +619,8 @@
                             <div class="uk-text-center uk-text-small">
                                 <span class="uk-badge uk-badge-large uk-badge-beige">14:50 - 15:50</span>
                                 <p class="uk-text-bold"></p>
-                                <p><strong>Keynote </strong> Gustavo Carvalho</p>
+                                <strong style="font-size: 1rem;">Keynote</strong>
+                                <p style="font-size: 1.2rem;" class="uk-text-bold">Gustavo Carvalho</p>
                             </div>
                         </div>
                     </div>
@@ -604,14 +628,14 @@
 
                 <div class="uk-width-1-1@m">
                     <div class="uk-card uk-card-default uk-text-center">
-                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">15:50 - 16:40</span>
+                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">15:50 - 16:50</span>
                         <h3 class="custom-class"> Encerramento </h3>
                     </div>
                 </div>
 
                 <div class="uk-width-1-1@m">
                     <div class="uk-card uk-card-default uk-text-center">
-                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">16:40 - 17:10</span>
+                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">16:50 - 17:30</span>
                         <h3 class="custom-class"> Coffee-break </h3>
                     </div>
                 </div>
