Add bigger margin to speakers page. Add blue box instead of using purple. Add new speakers to the website

--- a/speakers.html
+++ b/speakers.html
@@ -74,10 +74,10 @@
         </div>
     </div>
     <!-- Inicio -->
-    <div class="uk-container uk-margin-top uk-margin-bottom">
+    <div class="uk-container uk-container-small uk-margin-top uk-margin-bottom">
         <div class="uk-grid-small uk-child-width-expand@s uk-text-center" uk-grid>
             <div>
-                <div id="card1" class="uk-card uk-padding-small uk-card-purple card">
+                <div id="card1" class="uk-card uk-padding-small uk-card-blue card">
                     <h3>DIA 1</h3>
                     <p>09 de Agosto</p>
                 </div>
@@ -97,7 +97,7 @@
         </div>
     </div>
 
-    <div class="uk-container uk-margin-bottom">
+    <div class="uk-container uk-container-small uk-margin-bottom">
         <!-- PRIMEIRO DIA -->
         <div id="day1">
             <div class="uk-width-1-1@m uk-margin-bottom">
@@ -167,7 +167,8 @@
                         <div class="uk-grid-small uk-child-width-expand@m agenda-card-body">
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <!-- <img class="uk-border-circle avatar-medium" src="/assets/images/avatar/marcos-jacinto.png" alt="Avatar"> -->
+                                    <img class="uk-border-circle avatar-medium uk-margin-bottom" src="/assets/images/avatar/pablo-gustavo.jpg" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium" src="/assets/images/avatar/ian-gabriel.jpg" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small uk-grid-margin">
@@ -213,13 +214,13 @@
                     </span>
                 </div>
                 <div class="uk-card uk-card-default uk-text-center">
-                    <span class="custom-class uk-badge uk-badge-large uk-badge-beige">08:30 - 09:15</span>
+                    <span class="custom-class uk-badge uk-badge-large uk-badge-beige">08:30 - 09:30</span>
                     <h3 class="custom-class"> Inicio do credenciamento/Café da manhã </h3>
                 </div>
             </div>
 
             <div class="uk-width-1-1@m uk-margin-bottom">
-                <div class="uk-card-purple">
+                <div class="uk-card-blue">
                     <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
                         Sala 1
                     </span>
@@ -263,12 +264,13 @@
                         <div class="uk-grid-small uk-child-width-expand@m agenda-card-body">
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/apyb.jpg" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small uk-grid-margin">
                                 <span class="uk-badge uk-badge-large uk-badge-beige">10:20 - 11:10</span>
-                                <!-- <p class="uk-text-bold">APyB</p> -->
+                                <p class="uk-text-bold">Saindo do básico com Django-channels</p>
+                                <p><strong>Palestrante(s) </strong> Ana Dulce Padovan </p>
                             </div>
                         </div>
                     </div>
@@ -364,6 +366,34 @@
                     </div>
                 </div>
 
+                <div class="uk-width-1-1@m">
+                    <div>
+                        <div class="uk-card-blue">
+                            <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
+                                Hall de entrada
+                            </span>
+                        </div>
+                        <div class="uk-card uk-card-default uk-text-center">
+                            <span class="custom-class uk-badge uk-badge-large uk-badge-beige">14:50 - 15:30</span>
+                            <h3 class="custom-class"> Coffee-break </h3>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="uk-width-1-1@m">
+                    <div>
+                        <div class="uk-card-blue">
+                            <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
+                                Sala 1
+                            </span>
+                        </div>
+                        <div class="uk-card uk-card-default uk-text-center">
+                            <span class="custom-class uk-badge uk-badge-large uk-badge-beige">15:30 - 16:15</span>
+                            <h3 class="custom-class"> Palestras relâmpago </h3>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="uk-width-1-1@m uk-width-1-1@s">
                     <div>
                         <div class="uk-card-green">
@@ -379,7 +409,7 @@
                                     </div>
                                 </div>
                                 <div class="uk-text-center uk-text-small">
-                                    <span class="uk-badge uk-badge-large uk-badge-beige">14:50 - 15:50</span>
+                                    <span class="uk-badge uk-badge-large uk-badge-beige">16:15 - 17:15</span>
                                     <p class="uk-text-bold"></p>
                                     <strong style="font-size: 1rem;">Keynote</strong>
                                     <p style="font-size: 1.2rem;" class="uk-text-bold">Ana Cecília Vieira</p>
@@ -390,23 +420,16 @@
                 </div>
 
                 <div class="uk-width-1-1@m">
-                    <div class="uk-card uk-card-default uk-text-center">
-                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">15:50 - 16:30</span>
-                        <h3 class="custom-class"> Coffee-break </h3>
-                    </div>
-                </div>
-
-                <div class="uk-width-1-1@m">
-                    <div class="uk-card uk-card-default uk-text-center">
-                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">16:30 - 17:15</span>
-                        <h3 class="custom-class"> Palestras relâmpago </h3>
-                    </div>
-                </div>
-
-                <div class="uk-width-1-1@m">
-                    <div class="uk-card uk-card-default uk-text-center">
-                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">17:15 - 17:30</span>
-                        <h3 class="custom-class"> Encerramento primeiro dia </h3>
+                    <div>
+                        <div class="uk-card-blue">
+                            <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
+                                Sala 1
+                            </span>
+                        </div>
+                        <div class="uk-card uk-card-default uk-text-center">
+                            <span class="custom-class uk-badge uk-badge-large uk-badge-beige">17:15 - 17:30</span>
+                            <h3 class="custom-class"> Encerramento primeiro dia </h3>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -421,7 +444,7 @@
                     </span>
                 </div>
                 <div class="uk-card uk-card-default uk-text-center">
-                    <span class="custom-class uk-badge uk-badge-large uk-badge-beige">08:30 - 09:15</span>
+                    <span class="custom-class uk-badge uk-badge-large uk-badge-beige">08:30 - 09:30</span>
                     <h3 class="custom-class"> Inicio do credenciamento/Café da manhã </h3>
                 </div>
             </div>
@@ -627,16 +650,30 @@
                 </div>
 
                 <div class="uk-width-1-1@m">
-                    <div class="uk-card uk-card-default uk-text-center">
-                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">15:50 - 16:50</span>
-                        <h3 class="custom-class"> Encerramento </h3>
+                    <div>
+                        <div class="uk-card-blue">
+                            <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
+                                Sala 1
+                            </span>
+                        </div>
+                        <div class="uk-card uk-card-default uk-text-center">
+                            <span class="custom-class uk-badge uk-badge-large uk-badge-beige">15:50 - 16:50</span>
+                            <h3 class="custom-class"> Encerramento </h3>
+                        </div>
                     </div>
                 </div>
 
                 <div class="uk-width-1-1@m">
-                    <div class="uk-card uk-card-default uk-text-center">
-                        <span class="custom-class uk-badge uk-badge-large uk-badge-beige">16:50 - 17:30</span>
-                        <h3 class="custom-class"> Coffee-break </h3>
+                    <div>
+                        <div class="uk-card-blue">
+                            <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
+                                Sala 1
+                            </span>
+                        </div>
+                        <div class="uk-card uk-card-default uk-text-center">
+                            <span class="custom-class uk-badge uk-badge-large uk-badge-beige">16:50 - 17:30</span>
+                            <h3 class="custom-class"> Coffee-break </h3>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -704,12 +741,12 @@ document.addEventListener("DOMContentLoaded", function(event) {
     cards.forEach(card => {
         card.addEventListener('click', () => {
             cards.forEach(c => {
-                c.classList.remove('uk-card-purple');
+                c.classList.remove('uk-card-blue');
                 c.classList.add('uk-card-gray');
                 c.style.boxShadow = 'none';
             });
 
-            card.classList.add('uk-card-purple');
+            card.classList.add('uk-card-blue');
             card.classList.remove('uk-card-gray');
             card.style.boxShadow = '0 0 10px 0 rgba(0, 0, 0, 0.1)';
 
