--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
                 <div>
                 <h1>SOBRE O EVENTO</h1>
                 <p>
-                    A Python Nordeste é o <span class="uk-text-bold">maior encontro da comunidade Python</span> na região. 
+                    A Python Nordeste é o <strong>maior encontro da comunidade Python</strong> na região. 
                     É um evento itinerante que ocorre anualmente nas cidades do Nordeste a mais de 10 anos. Em 2024 chegaremos 
                     a 12ª edição do evento!
                 </p>
                 <p>
                     Com foco na promoção da diversidade e troca de experiências e conhecimento, 
-                    o evento é voltado para indivíduos de diversas áreas e origens, <span class="uk-text-bold">sem distinção</span>
+                    o evento é voltado para indivíduos de diversas áreas e origens, <strong>sem distinção</strong>
                     de conhecimento técnico ou atuação na área.
                 </p> 
                 <p>
@@ -214,7 +214,7 @@
         
         <div class="uk-margin-auto" style="max-width: 800px">
             <p class="uk-text-center">
-                Baixe aqui o nosso <span class="uk-text-bold">Plano de Patrocínio</span> com as 
+                Baixe aqui o nosso plano de patrocínio com as 
                 modalidades, benefícios e todas informações que 
                 você precisa.
             </p>
@@ -268,7 +268,7 @@
                     </p>
                     <p>
                         Identidade visual e design por 
-                        <a href="https://www.linkedin.com/in/lucas-lenin-456726162/">Lucas Lenin</a>
+                        <a href="https://www.linkedin.com/in/lucas-lenin-456726162/"><u>Lucas Lenin</u></a>
                     </p>
                 </div>
                 <div>
