--- a/speakers.html
+++ b/speakers.html
@@ -47,7 +47,7 @@
                 <li><a class="uk-navbar-item" href="/">Inicio</a></li>
                 <li><a class="uk-navbar-item" href="/index.html#sobre">Sobre</a></li>
                 <li><a class="uk-navbar-item" href="/index.html#local">Local</a></li>
-                <li><a class="uk-navbar-item" href="/index.html#patrocinio">Patrocínio</a></li>
+                <!-- <li><a class="uk-navbar-item" href="/index.html#patrocinio">Patrocínio</a></li> -->
                 <li><a class="uk-navbar-item" href="/index.html#patrocinadoras">Patrocinadoras</a></li>
                 <li><a class="uk-navbar-item" href="/speakers.html">Agenda</a></li>
             </ul>
@@ -696,7 +696,7 @@
                             </a>
                         </li>
                         <!-- <li>Keynotes</li> -->
-                        <li><a href="#patrocinio">Patrocínio</a></li>
+                        <!-- <li><a href="#patrocinio">Patrocínio</a></li> -->
                         <li><a href="https://github.com/pythonNordeste/codigo-de-conduta">Código de Conduta (CDC)</a></li>
                         <!-- <li>Perguntas Frequentes</li> -->
                         <!-- <li>Programação</li> -->
